# cnc-freecad

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: demo_part.step
scripts/: check_config.py  hello_cnc.py  install_to_freecad.sh  run.sh  setup.py  setup.sh  start_freecad.sh  start_freecad_headless.sh  test_freecad_gui_load.py  test_freecad_load.py  test_gui_env.py  test_setup.py  uninstall_from_freecad.sh  verify_env.sh
src/Mod/CncmAutoCAM/: InitGui.py
src/cnc_freecad/: __init__.py  __main__.py
src/cnc_freecad/core/: __init__.py  engine.py  postprocessor.py  toolpath_generator.py
src/cnc_freecad/data/: __init__.py  models.py
src/cnc_freecad/freecad/: InitGui.py  __init__.py  session.py  visualize.py  workbench.py
src/cnc_freecad/freecad/commands/: __init__.py  cmd_define_feature.py  cmd_generate.py  cmd_import_part.py  cmd_postprocess.py  cmd_select_template.py  cmd_select_tool.py
tests/: test_env.py  test_m1_toolpath.py  test_m1_ui.py
